# AI-Ecosystem

./: CMakeLists.txt  README.md
EcoRT/: BMath.cpp  BMath.h  BorderData.cpp  BorderData.h  Borders.cpp  Borders.h  CMakeLists.txt  Ecosystem.cpp  Ecosystem.h  Entity.cpp  Entity.h  Genetics.cpp  Genetics.h  LifeTree.cpp  LifeTree.h  MyRandom.cpp  MyRandom.h  NeatBrain.cpp  NeatBrain.h  Render.cpp  Render.h  SmoothNoise.cpp  SmoothNoise.h  SpatialHash.cpp  SpatialHash.h  Stomach.cpp  Stomach.h  VBOData.cpp  VBOData.h  WritingTracker.cpp  WritingTracker.h  main.cpp
